--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
     </div>
 </body>
-
+<!--------------------JavaScript-------------------->
 <script>
     var header = document.getElementById('header');
     var menu = document.getElementById('menu');
